--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
   conditional_builder_null_safety: ^0.0.6
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
