--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   dio: ^5.4.0
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_test:
